Complete fix for bug 41433 (assert/crash in DNS for offline-online) We were not destroying the monitor in shutdown. r=bryner.